ECOPROJECT-4720 | fix: replace hardcoded "skipTls=true" behaviour
Up till now every client connection to vSphere had hardcoded behaviour for skipping TLS verification, this PR replaces that with selections from the user.


# Conflicts:
#	api/v1/spec.gen.go
#	internal/handlers/v1/handlers.go
